[package]
name = "cider_utils"
version = "0.1.0"
license = "AGPL-3.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofty = "0.7.0"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6"]
