[package]
name = "cider_utils"
version = "0.1.5"
license = "AGPL-3.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofty = { git = "https://github.com/Serial-ATA/lofty-rs", branch = "main" }
base64 = "0.13.0"
walkdir = "2.3.2"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-runtime"]
